syntax = "proto3";
package recentNews;
import "base.proto";
import "campaign.proto";
import "profile.proto";
import "company.proto";

service RecentNewService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryRecentNew) returns (GetListResponse) {}
  rpc create(RecentNew) returns (GetOneResponse) {}
  rpc update(RecentNew) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}
message RecentNew {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional string url = 7;
  optional int32 campaignId = 8;
  optional Campaign campaign = 9;
  optional int32 profileId = 10;
  optional Profile profile = 11;
  optional int32 fundingRoundId = 12;
  optional int32 acquisitionId = 13;
  optional int32 companyId = 14;
  optional Company company = 15;
  optional int32 postId = 16;
}
message QueryRecentNew {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional string url = 11;
  optional int32 campaignId = 12;
  optional int32 profileId = 13;
  optional int32 fundingRoundId = 14;
  optional int32 acquisitionId = 15;
  optional int32 companyId = 16;
  optional int32 postId = 17;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated RecentNew data = 6;
}

message GetOneResponse {
  string message = 1;
  optional RecentNew data = 2;
}